// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`axis with default options 1`] = `
Array [
  <g
    className="tick"
    transform="translate(0.5,0)"
  >
    <line
      stroke="currentColor"
      y2={6}
    />
    <text
      dy="0.71em"
      fill="currentColor"
      fontFamily="sans-serif"
      fontSize="10"
      textAnchor="middle"
      y={9}
    >
      0.0
    </text>
  </g>,
  <g
    className="tick"
    transform="translate(0.6,0)"
  >
    <line
      stroke="currentColor"
      y2={6}
    />
    <text
      dy="0.71em"
      fill="currentColor"
      fontFamily="sans-serif"
      fontSize="10"
      textAnchor="middle"
      y={9}
    >
      0.1
    </text>
  </g>,
  <g
    className="tick"
    transform="translate(0.7,0)"
  >
    <line
      stroke="currentColor"
      y2={6}
    />
    <text
      dy="0.71em"
      fill="currentColor"
      fontFamily="sans-serif"
      fontSize="10"
      textAnchor="middle"
      y={9}
    >
      0.2
    </text>
  </g>,
  <g
    className="tick"
    transform="translate(0.8,0)"
  >
    <line
      stroke="currentColor"
      y2={6}
    />
    <text
      dy="0.71em"
      fill="currentColor"
      fontFamily="sans-serif"
      fontSize="10"
      textAnchor="middle"
      y={9}
    >
      0.3
    </text>
  </g>,
  <g
    className="tick"
    transform="translate(0.9,0)"
  >
    <line
      stroke="currentColor"
      y2={6}
    />
    <text
      dy="0.71em"
      fill="currentColor"
      fontFamily="sans-serif"
      fontSize="10"
      textAnchor="middle"
      y={9}
    >
      0.4
    </text>
  </g>,
  <g
    className="tick"
    transform="translate(1,0)"
  >
    <line
      stroke="currentColor"
      y2={6}
    />
    <text
      dy="0.71em"
      fill="currentColor"
      fontFamily="sans-serif"
      fontSize="10"
      textAnchor="middle"
      y={9}
    >
      0.5
    </text>
  </g>,
  <g
    className="tick"
    transform="translate(1.1,0)"
  >
    <line
      stroke="currentColor"
      y2={6}
    />
    <text
      dy="0.71em"
      fill="currentColor"
      fontFamily="sans-serif"
      fontSize="10"
      textAnchor="middle"
      y={9}
    >
      0.6
    </text>
  </g>,
  <g
    className="tick"
    transform="translate(1.2,0)"
  >
    <line
      stroke="currentColor"
      y2={6}
    />
    <text
      dy="0.71em"
      fill="currentColor"
      fontFamily="sans-serif"
      fontSize="10"
      textAnchor="middle"
      y={9}
    >
      0.7
    </text>
  </g>,
  <g
    className="tick"
    transform="translate(1.3,0)"
  >
    <line
      stroke="currentColor"
      y2={6}
    />
    <text
      dy="0.71em"
      fill="currentColor"
      fontFamily="sans-serif"
      fontSize="10"
      textAnchor="middle"
      y={9}
    >
      0.8
    </text>
  </g>,
  <g
    className="tick"
    transform="translate(1.4,0)"
  >
    <line
      stroke="currentColor"
      y2={6}
    />
    <text
      dy="0.71em"
      fill="currentColor"
      fontFamily="sans-serif"
      fontSize="10"
      textAnchor="middle"
      y={9}
    >
      0.9
    </text>
  </g>,
  <g
    className="tick"
    transform="translate(1.5,0)"
  >
    <line
      stroke="currentColor"
      y2={6}
    />
    <text
      dy="0.71em"
      fill="currentColor"
      fontFamily="sans-serif"
      fontSize="10"
      textAnchor="middle"
      y={9}
    >
      1.0
    </text>
  </g>,
  <path
    className="domain"
    d="M0.5,6V0.5H1.5V6"
    fill="transparent"
    stroke="currentColor"
  />,
]
`;

exports[`axis with top orientation 1`] = `
Array [
  <g
    className="tick"
    transform="translate(0.5,0)"
  >
    <line
      stroke="currentColor"
      y2={-6}
    />
    <text
      dy="0em"
      fill="currentColor"
      fontFamily="sans-serif"
      fontSize="10"
      textAnchor="middle"
      y={-9}
    >
      0.0
    </text>
  </g>,
  <g
    className="tick"
    transform="translate(0.6,0)"
  >
    <line
      stroke="currentColor"
      y2={-6}
    />
    <text
      dy="0em"
      fill="currentColor"
      fontFamily="sans-serif"
      fontSize="10"
      textAnchor="middle"
      y={-9}
    >
      0.1
    </text>
  </g>,
  <g
    className="tick"
    transform="translate(0.7,0)"
  >
    <line
      stroke="currentColor"
      y2={-6}
    />
    <text
      dy="0em"
      fill="currentColor"
      fontFamily="sans-serif"
      fontSize="10"
      textAnchor="middle"
      y={-9}
    >
      0.2
    </text>
  </g>,
  <g
    className="tick"
    transform="translate(0.8,0)"
  >
    <line
      stroke="currentColor"
      y2={-6}
    />
    <text
      dy="0em"
      fill="currentColor"
      fontFamily="sans-serif"
      fontSize="10"
      textAnchor="middle"
      y={-9}
    >
      0.3
    </text>
  </g>,
  <g
    className="tick"
    transform="translate(0.9,0)"
  >
    <line
      stroke="currentColor"
      y2={-6}
    />
    <text
      dy="0em"
      fill="currentColor"
      fontFamily="sans-serif"
      fontSize="10"
      textAnchor="middle"
      y={-9}
    >
      0.4
    </text>
  </g>,
  <g
    className="tick"
    transform="translate(1,0)"
  >
    <line
      stroke="currentColor"
      y2={-6}
    />
    <text
      dy="0em"
      fill="currentColor"
      fontFamily="sans-serif"
      fontSize="10"
      textAnchor="middle"
      y={-9}
    >
      0.5
    </text>
  </g>,
  <g
    className="tick"
    transform="translate(1.1,0)"
  >
    <line
      stroke="currentColor"
      y2={-6}
    />
    <text
      dy="0em"
      fill="currentColor"
      fontFamily="sans-serif"
      fontSize="10"
      textAnchor="middle"
      y={-9}
    >
      0.6
    </text>
  </g>,
  <g
    className="tick"
    transform="translate(1.2,0)"
  >
    <line
      stroke="currentColor"
      y2={-6}
    />
    <text
      dy="0em"
      fill="currentColor"
      fontFamily="sans-serif"
      fontSize="10"
      textAnchor="middle"
      y={-9}
    >
      0.7
    </text>
  </g>,
  <g
    className="tick"
    transform="translate(1.3,0)"
  >
    <line
      stroke="currentColor"
      y2={-6}
    />
    <text
      dy="0em"
      fill="currentColor"
      fontFamily="sans-serif"
      fontSize="10"
      textAnchor="middle"
      y={-9}
    >
      0.8
    </text>
  </g>,
  <g
    className="tick"
    transform="translate(1.4,0)"
  >
    <line
      stroke="currentColor"
      y2={-6}
    />
    <text
      dy="0em"
      fill="currentColor"
      fontFamily="sans-serif"
      fontSize="10"
      textAnchor="middle"
      y={-9}
    >
      0.9
    </text>
  </g>,
  <g
    className="tick"
    transform="translate(1.5,0)"
  >
    <line
      stroke="currentColor"
      y2={-6}
    />
    <text
      dy="0em"
      fill="currentColor"
      fontFamily="sans-serif"
      fontSize="10"
      textAnchor="middle"
      y={-9}
    >
      1.0
    </text>
  </g>,
  <path
    className="domain"
    d="M0.5,-6V0.5H1.5V-6"
    fill="transparent"
    stroke="currentColor"
  />,
]
`;

exports[`loads and displays greeting 1`] = `
Array [
  <g
    className="tick"
    transform="translate(0,0.5)"
  >
    <line
      stroke="currentColor"
      y2={6}
    />
    <text
      dy="0.32em"
      fill="currentColor"
      fontFamily="sans-serif"
      fontSize="10"
      textAnchor="middle"
      y={9}
    >
      0.0
    </text>
  </g>,
  <g
    className="tick"
    transform="translate(0,0.6)"
  >
    <line
      stroke="currentColor"
      y2={6}
    />
    <text
      dy="0.32em"
      fill="currentColor"
      fontFamily="sans-serif"
      fontSize="10"
      textAnchor="middle"
      y={9}
    >
      0.1
    </text>
  </g>,
  <g
    className="tick"
    transform="translate(0,0.7)"
  >
    <line
      stroke="currentColor"
      y2={6}
    />
    <text
      dy="0.32em"
      fill="currentColor"
      fontFamily="sans-serif"
      fontSize="10"
      textAnchor="middle"
      y={9}
    >
      0.2
    </text>
  </g>,
  <g
    className="tick"
    transform="translate(0,0.8)"
  >
    <line
      stroke="currentColor"
      y2={6}
    />
    <text
      dy="0.32em"
      fill="currentColor"
      fontFamily="sans-serif"
      fontSize="10"
      textAnchor="middle"
      y={9}
    >
      0.3
    </text>
  </g>,
  <g
    className="tick"
    transform="translate(0,0.9)"
  >
    <line
      stroke="currentColor"
      y2={6}
    />
    <text
      dy="0.32em"
      fill="currentColor"
      fontFamily="sans-serif"
      fontSize="10"
      textAnchor="middle"
      y={9}
    >
      0.4
    </text>
  </g>,
  <g
    className="tick"
    transform="translate(0,1)"
  >
    <line
      stroke="currentColor"
      y2={6}
    />
    <text
      dy="0.32em"
      fill="currentColor"
      fontFamily="sans-serif"
      fontSize="10"
      textAnchor="middle"
      y={9}
    >
      0.5
    </text>
  </g>,
  <g
    className="tick"
    transform="translate(0,1.1)"
  >
    <line
      stroke="currentColor"
      y2={6}
    />
    <text
      dy="0.32em"
      fill="currentColor"
      fontFamily="sans-serif"
      fontSize="10"
      textAnchor="middle"
      y={9}
    >
      0.6
    </text>
  </g>,
  <g
    className="tick"
    transform="translate(0,1.2)"
  >
    <line
      stroke="currentColor"
      y2={6}
    />
    <text
      dy="0.32em"
      fill="currentColor"
      fontFamily="sans-serif"
      fontSize="10"
      textAnchor="middle"
      y={9}
    >
      0.7
    </text>
  </g>,
  <g
    className="tick"
    transform="translate(0,1.3)"
  >
    <line
      stroke="currentColor"
      y2={6}
    />
    <text
      dy="0.32em"
      fill="currentColor"
      fontFamily="sans-serif"
      fontSize="10"
      textAnchor="middle"
      y={9}
    >
      0.8
    </text>
  </g>,
  <g
    className="tick"
    transform="translate(0,1.4)"
  >
    <line
      stroke="currentColor"
      y2={6}
    />
    <text
      dy="0.32em"
      fill="currentColor"
      fontFamily="sans-serif"
      fontSize="10"
      textAnchor="middle"
      y={9}
    >
      0.9
    </text>
  </g>,
  <g
    className="tick"
    transform="translate(0,1.5)"
  >
    <line
      stroke="currentColor"
      y2={6}
    />
    <text
      dy="0.32em"
      fill="currentColor"
      fontFamily="sans-serif"
      fontSize="10"
      textAnchor="middle"
      y={9}
    >
      1.0
    </text>
  </g>,
  <path
    className="domain"
    d="M0.5,6V0.5H1.5V6"
    fill="transparent"
    stroke="currentColor"
  />,
]
`;
